@@ -10,7 +10,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
@@ -247,18 +246,18 @@ public abstract class QuarkusBuild extends QuarkusBuildTask {
         getFileSystemOperations().delete(delete -> delete.delete(libDir));
 
         getLogger().info("Copying lib/ directory from {} into {}", depBuildDir, buildDir);
-        getFileSystemOperations().copy(copy -> {
+        getFileSystemOperations().copyPreservingTimestamps(copy -> {
             copy.into(buildDir);
             copy.from(depBuildDir);
             copy.include("lib/**");
         });
 
         getLogger().info("Copying lib/ directory from {} into {}", appBuildDir, buildDir);
-        getFileSystemOperations().copy(copy -> {
+        getFileSystemOperations().copyPreservingTimestamps((copy -> {
             copy.into(buildDir);
             copy.from(appBuildDir);
             copy.include("lib/**");
-        });
+        }));
 
         // Quarkus' 'legacy-jar' package type produces 'lib/modified-*.jar' files for some dependencies.
         // The following code block removes the non-modified jars.
@@ -266,7 +265,7 @@ public abstract class QuarkusBuild extends QuarkusBuildTask {
         try (Stream<Path> files = Files.walk(libDir)) {
             files.filter(Files::isRegularFile).filter(f -> f.getFileName().toString().startsWith("modified-"))
                     .map(f -> f.getParent().resolve(f.getFileName().toString().substring("modified-".length())))
-                    .collect(Collectors.toList()) // necessary :(
+                    .toList() // necessary :(
                     .forEach(f -> {
                         try {
                             Files.deleteIfExists(f);
@@ -298,7 +297,7 @@ public abstract class QuarkusBuild extends QuarkusBuildTask {
             getLogger().info("Copying Quarkus build for {} JAR type from {} into {}", jarType(),
                     genBuildDir, targetDir);
         }
-        getFileSystemOperations().copy(copy -> {
+        getFileSystemOperations().copyPreservingTimestamps(copy -> {
             copy.into(targetDir);
             copy.from(genBuildDir);
         });
@@ -328,8 +327,7 @@ public abstract class QuarkusBuild extends QuarkusBuildTask {
             getLogger().info("Synchronizing Quarkus build for {} JAR type from {} and {} into {}", jarType(),
                     appBuildDir, depBuildDir, appTargetDir);
         }
-        getFileSystemOperations().sync(sync -> {
-            sync.eachFile(new CopyActionDeleteNonWriteableTarget(appTargetDir.toPath()));
+        getFileSystemOperations().syncPreservingTimestamps(sync -> {
             sync.into(appTargetDir);
             sync.from(appBuildDir, depBuildDir);
         });
@@ -350,9 +348,8 @@ public abstract class QuarkusBuild extends QuarkusBuildTask {
             getLogger().info("Copying remaining Quarkus application artifacts for {} JAR type from {} into {}",
                     jarType(), sourceDir, buildDir);
         }
-        getFileSystemOperations().copy(
+        getFileSystemOperations().copyPreservingTimestamps(
                 copy -> {
-                    copy.eachFile(new CopyActionDeleteNonWriteableTarget(buildDir.toPath()));
                     copy.into(buildDir).from(sourceDir)
                             .include(QUARKUS_ARTIFACT_PROPERTIES,
                                     nativeRunnerFileName(),
